# mofe

./: .gitignore  README.md  package.json  pnpm-lock.yaml
app/backend/: pyproject.toml
app/desktop/: README.md  package.json  pnpm-lock.yaml
app/desktop/src/: App.css  App.tsx
app/desktop/src-tauri/: tauri.conf.json
app/desktop/src-tauri/capabilities/: default.json
app/desktop/src/components/: HomePage.css  HomePage.tsx  PreviewPage.css  PreviewPage.tsx
app/desktop/src/utils/: imageProcessor.ts
app/frontend/: README.md
app/server/: pyproject.toml
app/web/: package.json  pnpm-lock.yaml  vite.config.js
app/web/api/: index.js
app/web/src/components/: HistoryModal.jsx  ImageUploader.jsx  UploadModal.jsx
app/web/src/pages/: _layout.jsx  index.jsx
app/web/src/service/: index.js  upload.js
backend/: README.md
docker/: .env.example  README.md  docker-compose.yaml
server/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
server/app/: main.py  test.py
server/app/api/: __init__.py
server/app/api/v1/: __init__.py  images.py
server/app/core/: config.py
server/app/dao/: dao_images.py
server/app/db/: main.py  minio.py  postgres.py
server/app/models/: db_models.py  response.py
server/app/utils/: logger.py  model.py
server/scripts/: launch.sh
