[project]
name = "backend"
version = "0.1.0"
description = "mofe 模型以及后端服务"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastapi[standard]>=0.115.12", "lama", "pconv", "torch>=2.6.0", "torchaudio>=2.6.0", "torchvision>=0.21.0"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchvision = [{ index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
lama = { workspace = true }
pconv = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
