[project]
name = "mofe_server"
version = "0.1.0"
description = "mofe 模型以及后端服务"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "fastapi[standard]>=0.115.12",
    "lama",
    "loguru>=0.7.3",
    "minio>=7.2.15",
    "pconv",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "sqlmodel>=0.0.24",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchvision = [{ index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
lama = { workspace = true }
pconv = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
# url = "https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/pytorch/"
explicit = true

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
